<resources>
    <string name="app_name">Technical Task</string>
    <string name="skip_">Skip ></string>

    <string name="wizard_title_1">Welcome to Fluxstore</string>
    <string name="wizard_title_2">Lorconsectetur adipisicing</string>
    <string name="wizard_desc">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit</string>

    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="add_to_card">Add to Card</string>
    <string name="description">Description</string>
    <string name="desc">The Karissa V-Neck Tee features a semi-fitted shape that\'s flattering for every figure.
        You can hit the gym with confidence while it hugs curves and hides common \"problem\" areas.
        Find stunning women\'s cocktail dresses and party dresses.</string>
    <string name="product_code_">Product Code: </string>
    <string name="category_">Category: </string>
    <string name="material_">Material: </string>
    <string name="country_">Country: </string>
    <string name="dresses">Dresses</string>
    <string name="search">Search</string>
    <string name="tap_hold_the_product_to_add_to_cart"><![CDATA[Tap & hold the product to add to cart]]></string>
    <string name="sort_by">Sort by</string>
</resources>