<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    tools:context=".Activity.ReviewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_close"
                android:onClick="onBackClick" />

            <ImageView
                android:id="@+id/imgMain"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_gravity="top"
                android:layout_marginTop="-30dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cashmere Textured Dress"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSalePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$ 95.00"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="$ 50.00"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom">

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="4"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="0.1"
                        android:theme="@style/RatingBar" />

                    <TextView
                        android:id="@+id/tvCountVotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="(8)" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSize"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:text="@string/size"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/transparent"
                        android:gravity="end"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llColor"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:text="@string/color"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCard"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorDarkGreen"
                        android:text="@string/add_to_card"
                        android:textColor="@color/colorWhite" />

                    <Spinner
                        android:id="@+id/spinnerCountGoods"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="3"
                        android:background="@drawable/rectangle" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDescController"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/description"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="3"
                        android:background="@drawable/abc_spinner_mtrl_am_alpha" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvProductCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/product_code_"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

                    <TextView
                        android:id="@+id/tvProductCodeInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/product_code_"
                        android:textColor="@color/colorBlack"
                        app:layout_constraintBottom_toBottomOf="@+id/tvProductCode"
                        app:layout_constraintLeft_toRightOf="@+id/tvProductCode"
                        app:layout_constraintTop_toTopOf="@+id/tvProductCode" />

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/category_"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvProductCode" />

                    <TextView
                        android:id="@+id/tvCategoryInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/category_"
                        android:textColor="@color/colorBlack"
                        app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
                        app:layout_constraintLeft_toRightOf="@+id/tvCategory"
                        app:layout_constraintTop_toTopOf="@+id/tvCategory" />

                    <TextView
                        android:id="@+id/tvMaterial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/material_"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

                    <TextView
                        android:id="@+id/tvMaterialInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/material_"
                        android:textColor="@color/colorDarkGreen"
                        app:layout_constraintBottom_toBottomOf="@+id/tvMaterial"
                        app:layout_constraintLeft_toRightOf="@+id/tvMaterial"
                        app:layout_constraintTop_toTopOf="@+id/tvMaterial" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/country_"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvMaterial" />

                    <TextView
                        android:id="@+id/tvCountryInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/country_"
                        android:textColor="@color/colorBlack"
                        app:layout_constraintBottom_toBottomOf="@+id/tvCountry"
                        app:layout_constraintLeft_toRightOf="@+id/tvCountry"
                        app:layout_constraintTop_toTopOf="@+id/tvCountry" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>